[gd_scene load_steps=23 format=3 uid="uid://bfcfm2qdipj7y"]

[ext_resource type="Script" uid="uid://bn4d0ve0410ge" path="res://Scripts/Boss/HelicopterEggman.gd" id="1_adpj0"]
[ext_resource type="Texture2D" uid="uid://6ds1jcc8jmyf" path="res://Graphics/Boss/Eggmobile.png" id="2_aqbo8"]
[ext_resource type="Texture2D" uid="uid://dam0q6u1k8paq" path="res://Graphics/Boss/Jet.png" id="3_0ilxg"]
[ext_resource type="Texture2D" uid="uid://btepj3b18ug5d" path="res://Graphics/Boss/EHZ_Chopper.png" id="3_koewv"]
[ext_resource type="Texture2D" uid="uid://d0i06mnbra5yc" path="res://Graphics/Boss/Robotnik.png" id="5_jym61"]
[ext_resource type="Texture2D" uid="uid://bf0ytf63vlq5c" path="res://Graphics/Boss/EggmobileFlash.png" id="6_xqm3u"]
[ext_resource type="AudioStream" uid="uid://bq25mlko4saoj" path="res://Audio/SFX/Boss/s2br_BossHit.wav" id="7_lv4is"]
[ext_resource type="AudioStream" uid="uid://u14e5d6axr7x" path="res://Audio/SFX/Boss/s2br_BossExplosion.wav" id="8_mlq37"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8gg6r"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_41324"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr3ju"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 48, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4lk1"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 32, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkgp8"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 64, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w20l"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 80, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1afxm"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m5w5"]
atlas = ExtResource("5_jym61")
region = Rect2(0, 16, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x1amu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gg6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41324")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr3ju")
}],
"loop": true,
"name": &"exploded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4lk1")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkgp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w20l")
}],
"loop": true,
"name": &"laugh",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1afxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m5w5")
}],
"loop": true,
"name": &"move",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(48, 48)

[sub_resource type="Animation" id="Animation_7tsso"]
resource_name = "CLOSE"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EggMobile/Eggmobile_Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EggMobile/Eggmobile_Top:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, -48), Vector2(10, -36)]
}

[sub_resource type="Animation" id="Animation_8aw2f"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EggMobile/Eggmobile_Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EggMobile/Eggmobile_Top:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -36)]
}

[sub_resource type="Animation" id="Animation_mavgo"]
resource_name = "SPIN"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EggMobile/Eggmobile_Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 4, 0, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EggMobile/Eggmobile_Top:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fbdxo"]
_data = {
&"CLOSE": SubResource("Animation_7tsso"),
&"RESET": SubResource("Animation_8aw2f"),
&"SPIN": SubResource("Animation_mavgo")
}

[node name="HelicopterEggman" type="CharacterBody2D"]
z_index = 1
collision_layer = 16384
collision_mask = 8388608
script = ExtResource("1_adpj0")

[node name="EggMobile" type="Sprite2D" parent="."]
position = Vector2(0, 19)
texture = ExtResource("2_aqbo8")
offset = Vector2(0, -8)

[node name="Eggmobile_Top" type="Sprite2D" parent="EggMobile"]
z_as_relative = false
position = Vector2(10, -36)
texture = ExtResource("3_koewv")
vframes = 8
frame = 7

[node name="EggmobileFlame" type="Sprite2D" parent="EggMobile"]
visible = false
position = Vector2(36, -8)
texture = ExtResource("3_0ilxg")

[node name="Robotnik" type="AnimatedSprite2D" parent="EggMobile"]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_x1amu")

[node name="EggFlash" type="Sprite2D" parent="EggMobile"]
visible = false
texture = ExtResource("6_xqm3u")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("5")

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lv4is")
bus = &"SFX"

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_mlq37")
bus = &"SFX"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8388608
collision_mask = 528384

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("5")

[node name="LeftPoint" type="Node2D" parent="."]
position = Vector2(-632, 0)

[node name="RightPoint" type="Node2D" parent="."]
position = Vector2(72, 0)

[node name="SmokeTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="AnimationTime" type="Timer" parent="."]
one_shot = true

[node name="Helicopter" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fbdxo")
}
autoplay = "SPIN"

[connection signal="defeated" from="." to="." method="_on_boss_defeated"]
[connection signal="area_entered" from="HitBox" to="." method="_on_DamageArea_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_body_exited"]
[connection signal="timeout" from="SmokeTimer" to="." method="_on_SmokeTimer_timeout"]
